project implements MVP pattern